--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
    			<span class="icon-bar"></span>
    			<span class="icon-bar"></span>
    		</button>
-   		<a class="navbar-brand" href="#">Title</a>
+   		<a class="navbar-brand" href="#">Sample App</a>
    	</div>
    
    	<!-- Collect the nav links, forms, and other content for toggling -->
