--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,8 +13,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav">
-         <li><%= link_to "Home",   '/static_pages/home' %></li>
-        <li><%= link_to "About",   '/static_pages/about' %></li>
+         <li><%= link_to "Home",   'home' %></li>
+        <li><%= link_to "About",   'about' %></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -25,6 +25,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
            <ul class="nav pull-right">
+            
           <li class="dropdown" id="menuLogin">
             <a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navLogin">Login</a>
             <div class="dropdown-menu" style="padding:17px;">
