--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,13 +13,11 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav">
-         <li><%= link_to "Home",   'home' %></li>
-        <li><%= link_to "About",   'about' %></li>
+         <li><%= link_to "Home",   home_path %></li>
+        <li><%= link_to "About",   about_path %></li>
+        <li><%= link_to "Sign In",   signup_path %></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
