--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
       <ul class="nav navbar-nav">
          <li><%= link_to "Home",   home_path %></li>
         <li><%= link_to "About",   about_path %></li>
-        <li><%= link_to "Sign In",   signup_path %></li>
+        <li><%= link_to "Log In",   login_path %></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <button type="submit" class="btn btn-default">Submit</button>
