--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,13 +17,12 @@
         <li><%= link_to "About",   about_path %></li>
         <li><%= link_to "Log In",   login_path %></li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+     
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-            <ul class="nav pull-right">
+            <ul class="nav navbar-nav pull-right">
                <% if logged_in? %>
+                  <li><%= link_to "Log In",   login_path %></li>
                   <li id="fat-menu" class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
             <ul class="dropdown-menu">
