--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
         <li class="dropdown">
             <ul class="nav navbar-nav pull-right">
                <% if logged_in? %>
-                  <li><%= link_to "Log In",   login_path %></li>
+                  <li><%= link_to "FAQ",   login_path %></li>
                   <li id="fat-menu" class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
             <ul class="dropdown-menu">
